src/main/gen/io/github/aabmets/prooffroglang/parser/ProofFrogParser.java
// This is a generated file. Not intended for manual editing.
package io.github.aabmets.prooffroglang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.github.aabmets.prooffroglang.psi.ProofFrogTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ProofFrogParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  /* ********************************************************** */
  // multiplyExpr ( (OP_ADD | OP_SUB) multiplyExpr )*
  public static boolean addExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_EXPR, "<add expr>");
    r = multiplyExpr(b, l + 1);
    r = r && addExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( (OP_ADD | OP_SUB) multiplyExpr )*
  private static boolean addExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!addExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "addExpr_1", c)) break;
    }
    return true;
  }

  // (OP_ADD | OP_SUB) multiplyExpr
  private static boolean addExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = addExpr_1_0_0(b, l + 1);
    r = r && multiplyExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_ADD | OP_SUB
  private static boolean addExpr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addExpr_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_ADD);
    if (!r) r = consumeToken(b, OP_SUB);
    return r;
  }

  /* ********************************************************** */
  // multiplyIntegerExpr
  //     ( (OP_ADD | OP_SUB) multiplyIntegerExpr )*
  public static boolean addIntegerExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addIntegerExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_INTEGER_EXPR, "<add integer expr>");
    r = multiplyIntegerExpr(b, l + 1);
    r = r && addIntegerExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( (OP_ADD | OP_SUB) multiplyIntegerExpr )*
  private static boolean addIntegerExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addIntegerExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!addIntegerExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "addIntegerExpr_1", c)) break;
    }
    return true;
  }

  // (OP_ADD | OP_SUB) multiplyIntegerExpr
  private static boolean addIntegerExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addIntegerExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = addIntegerExpr_1_0_0(b, l + 1);
    r = r && multiplyIntegerExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_ADD | OP_SUB
  private static boolean addIntegerExpr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addIntegerExpr_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_ADD);
    if (!r) r = consumeToken(b, OP_SUB);
    return r;
  }

  /* ********************************************************** */
  // compareExpr (OP_AND compareExpr)*
  public static boolean andExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_EXPR, "<and expr>");
    r = compareExpr(b, l + 1);
    r = r && andExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_AND compareExpr)*
  private static boolean andExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!andExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "andExpr_1", c)) break;
    }
    return true;
  }

  // OP_AND compareExpr
  private static boolean andExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_AND);
    r = r && compareExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression (PN_COMMA expression)*
  public static boolean argList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG_LIST, "<arg list>");
    r = expression(b, l + 1);
    r = r && argList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (PN_COMMA expression)*
  private static boolean argList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argList_1", c)) break;
    }
    return true;
  }

  // PN_COMMA expression
  private static boolean argList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PN_COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // lvalue OP_ASSIGN expression PN_SEMI
  public static boolean assignStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignStmt")) return false;
    if (!nextTokenIs(b, VL_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lvalue(b, l + 1);
    r = r && consumeToken(b, OP_ASSIGN);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, PN_SEMI);
    exit_section_(b, m, ASSIGN_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // (parameterizedGame PN_SEMI)* (KW_CALLS (OP_LEQ | OP_LT) expression PN_SEMI)?
  public static boolean assumptions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assumptions")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSUMPTIONS, "<assumptions>");
    r = assumptions_0(b, l + 1);
    r = r && assumptions_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (parameterizedGame PN_SEMI)*
  private static boolean assumptions_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assumptions_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!assumptions_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assumptions_0", c)) break;
    }
    return true;
  }

  // parameterizedGame PN_SEMI
  private static boolean assumptions_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assumptions_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameterizedGame(b, l + 1);
    r = r && consumeToken(b, PN_SEMI);
    exit_section_(b, m, null, r);
    return r;
  }

  // (KW_CALLS (OP_LEQ | OP_LT) expression PN_SEMI)?
  private static boolean assumptions_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assumptions_1")) return false;
    assumptions_1_0(b, l + 1);
    return true;
  }

  // KW_CALLS (OP_LEQ | OP_LT) expression PN_SEMI
  private static boolean assumptions_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assumptions_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KW_CALLS);
    r = r && assumptions_1_0_1(b, l + 1);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, PN_SEMI);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_LEQ | OP_LT
  private static boolean assumptions_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assumptions_1_0_1")) return false;
    boolean r;
    r = consumeToken(b, OP_LEQ);
    if (!r) r = consumeToken(b, OP_LT);
    return r;
  }

  /* ********************************************************** */
  // DT_SET OP_LT type OP_GT
  //     | DT_SET
  //     | DT_BOOL
  //     | DT_VOID
  //     | DT_MAP OP_LT type PN_COMMA type OP_GT
  //     | DT_ARRAY OP_LT type PN_COMMA integerExpr OP_GT
  //     | DT_INT
  //     | DT_BITSTRING OP_LT integerExpr OP_GT
  //     | DT_BITSTRING
  //     | lvalue
  public static boolean atomicType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomicType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMIC_TYPE, "<atomic type>");
    r = atomicType_0(b, l + 1);
    if (!r) r = consumeToken(b, DT_SET);
    if (!r) r = consumeToken(b, DT_BOOL);
    if (!r) r = consumeToken(b, DT_VOID);
    if (!r) r = atomicType_4(b, l + 1);
    if (!r) r = atomicType_5(b, l + 1);
    if (!r) r = consumeToken(b, DT_INT);
    if (!r) r = atomicType_7(b, l + 1);
    if (!r) r = consumeToken(b, DT_BITSTRING);
    if (!r) r = lvalue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DT_SET OP_LT type OP_GT
  private static boolean atomicType_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomicType_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DT_SET, OP_LT);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, OP_GT);
    exit_section_(b, m, null, r);
    return r;
  }

  // DT_MAP OP_LT type PN_COMMA type OP_GT
  private static boolean atomicType_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomicType_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DT_MAP, OP_LT);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, PN_COMMA);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, OP_GT);
    exit_section_(b, m, null, r);
    return r;
  }

  // DT_ARRAY OP_LT type PN_COMMA integerExpr OP_GT
  private static boolean atomicType_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomicType_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DT_ARRAY, OP_LT);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, PN_COMMA);
    r = r && integerExpr(b, l + 1);
    r = r && consumeToken(b, OP_GT);
    exit_section_(b, m, null, r);
    return r;
  }

  // DT_BITSTRING OP_LT integerExpr OP_GT
  private static boolean atomicType_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomicType_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DT_BITSTRING, OP_LT);
    r = r && integerExpr(b, l + 1);
    r = r && consumeToken(b, OP_GT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ST_BRACE_L statement* ST_BRACE_R
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, ST_BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ST_BRACE_L);
    r = r && block_1(b, l + 1);
    r = r && consumeToken(b, ST_BRACE_R);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // statement*
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ST_PAREN_L argList? ST_PAREN_R
  public static boolean callExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpr")) return false;
    if (!nextTokenIs(b, ST_PAREN_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ST_PAREN_L);
    r = r && callExpr_1(b, l + 1);
    r = r && consumeToken(b, ST_PAREN_R);
    exit_section_(b, m, CALL_EXPR, r);
    return r;
  }

  // argList?
  private static boolean callExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpr_1")) return false;
    argList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // expression ST_PAREN_L argList? ST_PAREN_R PN_SEMI
  public static boolean callStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL_STMT, "<call stmt>");
    r = expression(b, l + 1);
    r = r && consumeToken(b, ST_PAREN_L);
    r = r && callStmt_2(b, l + 1);
    r = r && consumeTokens(b, 0, ST_PAREN_R, PN_SEMI);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // argList?
  private static boolean callStmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callStmt_2")) return false;
    argList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // addExpr (
  //     (OP_EQ | OP_NEQ | OP_GT | OP_LT | OP_GEQ | OP_LEQ | KW_IN | KW_SUBSETS)
  //     addExpr
  // )?
  public static boolean compareExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARE_EXPR, "<compare expr>");
    r = addExpr(b, l + 1);
    r = r && compareExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (
  //     (OP_EQ | OP_NEQ | OP_GT | OP_LT | OP_GEQ | OP_LEQ | KW_IN | KW_SUBSETS)
  //     addExpr
  // )?
  private static boolean compareExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr_1")) return false;
    compareExpr_1_0(b, l + 1);
    return true;
  }

  // (OP_EQ | OP_NEQ | OP_GT | OP_LT | OP_GEQ | OP_LEQ | KW_IN | KW_SUBSETS)
  //     addExpr
  private static boolean compareExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = compareExpr_1_0_0(b, l + 1);
    r = r && addExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_EQ | OP_NEQ | OP_GT | OP_LT | OP_GEQ | OP_LEQ | KW_IN | KW_SUBSETS
  private static boolean compareExpr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_EQ);
    if (!r) r = consumeToken(b, OP_NEQ);
    if (!r) r = consumeToken(b, OP_GT);
    if (!r) r = consumeToken(b, OP_LT);
    if (!r) r = consumeToken(b, OP_GEQ);
    if (!r) r = consumeToken(b, OP_LEQ);
    if (!r) r = consumeToken(b, KW_IN);
    if (!r) r = consumeToken(b, KW_SUBSETS);
    return r;
  }

  /* ********************************************************** */
  // parameterizedGame PN_PERIOD id
  public static boolean concreteGame(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concreteGame")) return false;
    if (!nextTokenIs(b, VL_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameterizedGame(b, l + 1);
    r = r && consumeToken(b, PN_PERIOD);
    r = r && id(b, l + 1);
    exit_section_(b, m, CONCRETE_GAME, r);
    return r;
  }

  /* ********************************************************** */
  // KW_IF ST_PAREN_L expression ST_PAREN_R block
  //     (KW_ELSE KW_IF ST_PAREN_L expression ST_PAREN_R block)*
  //     (KW_ELSE block)?
  public static boolean conditionalStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalStmt")) return false;
    if (!nextTokenIs(b, KW_IF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_IF, ST_PAREN_L);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, ST_PAREN_R);
    r = r && block(b, l + 1);
    r = r && conditionalStmt_5(b, l + 1);
    r = r && conditionalStmt_6(b, l + 1);
    exit_section_(b, m, CONDITIONAL_STMT, r);
    return r;
  }

  // (KW_ELSE KW_IF ST_PAREN_L expression ST_PAREN_R block)*
  private static boolean conditionalStmt_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalStmt_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditionalStmt_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditionalStmt_5", c)) break;
    }
    return true;
  }

  // KW_ELSE KW_IF ST_PAREN_L expression ST_PAREN_R block
  private static boolean conditionalStmt_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalStmt_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_ELSE, KW_IF, ST_PAREN_L);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, ST_PAREN_R);
    r = r && block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (KW_ELSE block)?
  private static boolean conditionalStmt_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalStmt_6")) return false;
    conditionalStmt_6_0(b, l + 1);
    return true;
  }

  // KW_ELSE block
  private static boolean conditionalStmt_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalStmt_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KW_ELSE);
    r = r && block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // setMinusExpr
  public static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION, "<expression>");
    r = setMinusExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // variable (OP_ASSIGN expression)?
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = variable(b, l + 1);
    r = r && field_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_ASSIGN expression)?
  private static boolean field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_1")) return false;
    field_1_0(b, l + 1);
    return true;
  }

  // OP_ASSIGN expression
  private static boolean field_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // primitiveProgram |
  //     schemeProgram |
  //     gameProgram |
  //     proofProgram |
  //     VL_LINE_COMMENT
  static boolean file(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file")) return false;
    boolean r;
    r = primitiveProgram(b, l + 1);
    if (!r) r = schemeProgram(b, l + 1);
    if (!r) r = gameProgram(b, l + 1);
    if (!r) r = proofProgram(b, l + 1);
    if (!r) r = consumeToken(b, VL_LINE_COMMENT);
    return r;
  }

  /* ********************************************************** */
  // CL_GAME id ST_PAREN_L paramList? ST_PAREN_R ST_BRACE_L gameBody ST_BRACE_R
  public static boolean game(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "game")) return false;
    if (!nextTokenIs(b, CL_GAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CL_GAME);
    r = r && id(b, l + 1);
    r = r && consumeToken(b, ST_PAREN_L);
    r = r && game_3(b, l + 1);
    r = r && consumeTokens(b, 0, ST_PAREN_R, ST_BRACE_L);
    r = r && gameBody(b, l + 1);
    r = r && consumeToken(b, ST_BRACE_R);
    exit_section_(b, m, GAME, r);
    return r;
  }

  // paramList?
  private static boolean game_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "game_3")) return false;
    paramList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // parameterizedGame PN_PERIOD PR_ADVERSARY
  public static boolean gameAdversary(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "gameAdversary")) return false;
    if (!nextTokenIs(b, VL_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameterizedGame(b, l + 1);
    r = r && consumeTokens(b, 0, PN_PERIOD, PR_ADVERSARY);
    exit_section_(b, m, GAME_ADVERSARY, r);
    return r;
  }

  /* ********************************************************** */
  // (field PN_SEMI)* method+ |
  //     (field PN_SEMI)* method* gamePhase+
  public static boolean gameBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "gameBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GAME_BODY, "<game body>");
    r = gameBody_0(b, l + 1);
    if (!r) r = gameBody_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (field PN_SEMI)* method+
  private static boolean gameBody_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "gameBody_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = gameBody_0_0(b, l + 1);
    r = r && gameBody_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
